build/lib/csscoco/lang/syntax/cocoParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .cocoVisitor import cocoVisitor
else:
    from cocoVisitor import cocoVisitor



class cocoParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'{'", u"'}'", u"'forbid'", u"'message'", 
                     u"'require'", u"'find'", u"'in'", u"'next-to'", u"'('", 
                     u"','", u"')'", u"'='", u"'not'", u"'and'", u"'or'", 
                     u"'is'", u"'before'", u"'after'", u"'between'", u"'-'", 
                     u"'<'", u"'>'", u"'<='", u"'>='", u"'=='", u"'!='", 
                     u"'not in'", u"'match'", u"'not match'", u"'.'", u"'['", 
                     u"']'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"Boolean", u"Identifier", u"Integer", 
                      u"String", u"Comment", u"LineComment", u"WS" ]

    RULE_stylesheet = 0
    RULE_context = 1
    RULE_convention = 2
    RULE_pattern = 3
    RULE_fork_pattern = 4
    RULE_node_declaration = 5
    RULE_semantic_node = 6
    RULE_node_type = 7
    RULE_whitespace_variation = 8
    RULE_whitespace_node = 9
    RULE_logic_expr = 10
    RULE_type_expr = 11
    RULE_arithmetic_expr = 12
    RULE_element = 13
    RULE_call_expr = 14
    RULE_repeater = 15
    RULE_convention_group = 16
    RULE_list_ = 17
    RULE_list_element = 18

    ruleNames =  [ "stylesheet", "context", "convention", "pattern", "fork_pattern", 
                   "node_declaration", "semantic_node", "node_type", "whitespace_variation", 
                   "whitespace_node", "logic_expr", "type_expr", "arithmetic_expr", 
                   "element", "call_expr", "repeater", "convention_group", 
                   "list_", "list_element" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    Boolean=33
    Identifier=34
    Integer=35
    String=36
    Comment=37
    LineComment=38
    WS=39

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StylesheetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def context(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cocoParser.ContextContext)
            else:
                return self.getTypedRuleContext(cocoParser.ContextContext,i)


        def getRuleIndex(self):
            return cocoParser.RULE_stylesheet

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, cocoVisitor ):
                return visitor.visitStylesheet(self)
            else:
                return visitor.visitChildren(self)




    def stylesheet(self):

        localctx = cocoParser.StylesheetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_stylesheet)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==cocoParser.Identifier:
                self.state = 38
                self.context()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ContextContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def Identifier(self):
            return self.getToken(cocoParser.Identifier, 0)

        def convention(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cocoParser.ConventionContext)
            else:
                return self.getTypedRuleContext(cocoParser.ConventionContext,i)


        def getRuleIndex(self):
            return cocoParser.RULE_context

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, cocoVisitor ):
                return visitor.visitContext(self)
            else:
                return visitor.visitChildren(self)




    def context(self):

        localctx = cocoParser.ContextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_context)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            localctx.name = self.match(cocoParser.Identifier)
            self.state = 45
            self.match(cocoParser.T__0)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << cocoParser.T__2) | (1 << cocoParser.T__4) | (1 << cocoParser.T__5))) != 0):
                self.state = 46
                self.convention()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(cocoParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConventionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.action = None # Token
            self.target = None # PatternContext
            self.message = None # Token
            self.requirement = None # Logic_exprContext
            self.find = None # Token

        def pattern(self):
            return self.getTypedRuleContext(cocoParser.PatternContext,0)


        def String(self):
            return self.getToken(cocoParser.String, 0)

        def logic_expr(self):
            return self.getTypedRuleContext(cocoParser.Logic_exprContext,0)


        def getRuleIndex(self):
            return cocoParser.RULE_convention

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, cocoVisitor ):
                return visitor.visitConvention(self)
            else:
                return visitor.visitChildren(self)




    def convention(self):

        localctx = cocoParser.ConventionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_convention)
        self._la = 0 # Token type
        try:
            self.state = 71
            token = self._input.LA(1)
            if token in [cocoParser.T__2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                localctx.action = self.match(cocoParser.T__2)
                self.state = 55
                localctx.target = self.pattern()
                self.state = 56
                self.match(cocoParser.T__3)
                self.state = 57
                localctx.message = self.match(cocoParser.String)

            elif token in [cocoParser.T__4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                localctx.action = self.match(cocoParser.T__4)
                self.state = 60
                localctx.requirement = self.logic_expr(0)
                self.state = 61
                self.match(cocoParser.T__3)
                self.state = 62
                localctx.message = self.match(cocoParser.String)

            elif token in [cocoParser.T__5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                localctx.find = self.match(cocoParser.T__5)
                self.state = 65
                localctx.target = self.pattern()
                self.state = 66
                localctx.action = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==cocoParser.T__2 or _la==cocoParser.T__4):
                    localctx.action = self._errHandler.recoverInline(self)
                else:
                    self.consume()
                self.state = 67
                localctx.requirement = self.logic_expr(0)
                self.state = 68
                self.match(cocoParser.T__3)
                self.state = 69
                localctx.message = self.match(cocoParser.String)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PatternContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.simple = None # Node_declarationContext
            self.relation = None # Token
            self.fork = None # Fork_patternContext

        def node_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cocoParser.Node_declarationContext)
            else:
                return self.getTypedRuleContext(cocoParser.Node_declarationContext,i)


        def fork_pattern(self):
            return self.getTypedRuleContext(cocoParser.Fork_patternContext,0)


        def getRuleIndex(self):
            return cocoParser.RULE_pattern

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, cocoVisitor ):
                return visitor.visitPattern(self)
            else:
                return visitor.visitChildren(self)




    def pattern(self):

        localctx = cocoParser.PatternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_pattern)
        self._la = 0 # Token type
        try:
            self.state = 89
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                localctx.simple = self.node_declaration()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==cocoParser.T__6 or _la==cocoParser.T__7:
                    self.state = 74
                    localctx.relation = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not(_la==cocoParser.T__6 or _la==cocoParser.T__7):
                        localctx.relation = self._errHandler.recoverInline(self)
                    else:
                        self.consume()
                    self.state = 75
                    self.node_declaration()
                    self.state = 80
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                localctx.fork = self.fork_pattern()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==cocoParser.T__6:
                    self.state = 82
                    localctx.relation = self.match(cocoParser.T__6)
                    self.state = 83
                    self.node_declaration()
                    self.state = 88
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fork_patternContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def node_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cocoParser.Node_declarationContext)
            else:
                return self.getTypedRuleContext(cocoParser.Node_declarationContext,i)


        def getRuleIndex(self):
            return cocoParser.RULE_fork_pattern

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, cocoVisitor ):
                return visitor.visitFork_pattern(self)
            else:
                return visitor.visitChildren(self)




    def fork_pattern(self):

        localctx = cocoParser.Fork_patternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_fork_pattern)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(cocoParser.T__8)
            self.state = 92
            self.node_declaration()
            self.state = 95 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 93
                self.match(cocoParser.T__9)
                self.state = 94
                self.node_declaration()
                self.state = 97 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==cocoParser.T__9):
                    break

            self.state = 99
            self.match(cocoParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Node_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.variable = None # Token
            self.node = None # Semantic_nodeContext

        def semantic_node(self):
            return self.getTypedRuleContext(cocoParser.Semantic_nodeContext,0)


        def Identifier(self):
            return self.getToken(cocoParser.Identifier, 0)

        def getRuleIndex(self):
            return cocoParser.RULE_node_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, cocoVisitor ):
                return visitor.visitNode_declaration(self)
            else:
                return visitor.visitChildren(self)




    def node_declaration(self):

        localctx = cocoParser.Node_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_node_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 101
                localctx.variable = self.match(cocoParser.Identifier)
                self.state = 102
                self.match(cocoParser.T__11)


            self.state = 105
            localctx.node = self.semantic_node()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Semantic_nodeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type_ = None # Node_typeContext
            self.constraint = None # Logic_exprContext

        def node_type(self):
            return self.getTypedRuleContext(cocoParser.Node_typeContext,0)


        def logic_expr(self):
            return self.getTypedRuleContext(cocoParser.Logic_exprContext,0)


        def getRuleIndex(self):
            return cocoParser.RULE_semantic_node

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, cocoVisitor ):
                return visitor.visitSemantic_node(self)
            else:
                return visitor.visitChildren(self)




    def semantic_node(self):

        localctx = cocoParser.Semantic_nodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_semantic_node)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            localctx.type_ = self.node_type(0)
            self.state = 112
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 108
                self.match(cocoParser.T__0)
                self.state = 109
                localctx.constraint = self.logic_expr(0)
                self.state = 110
                self.match(cocoParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Node_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # Node_typeContext
            self.operator = None # Token
            self.operand = None # Node_typeContext
            self.parenthesis = None # Node_typeContext
            self.primary = None # Token
            self.right = None # Node_typeContext

        def node_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cocoParser.Node_typeContext)
            else:
                return self.getTypedRuleContext(cocoParser.Node_typeContext,i)


        def Identifier(self):
            return self.getToken(cocoParser.Identifier, 0)

        def getRuleIndex(self):
            return cocoParser.RULE_node_type

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, cocoVisitor ):
                return visitor.visitNode_type(self)
            else:
                return visitor.visitChildren(self)



    def node_type(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = cocoParser.Node_typeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_node_type, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            token = self._input.LA(1)
            if token in [cocoParser.T__12]:
                self.state = 115
                localctx.operator = self.match(cocoParser.T__12)
                self.state = 116
                localctx.operand = self.node_type(4)

            elif token in [cocoParser.T__8]:
                self.state = 117
                self.match(cocoParser.T__8)
                self.state = 118
                localctx.parenthesis = self.node_type(0)
                self.state = 119
                self.match(cocoParser.T__10)

            elif token in [cocoParser.Identifier]:
                self.state = 121
                localctx.primary = self.match(cocoParser.Identifier)

            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 132
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 130
                    la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                    if la_ == 1:
                        localctx = cocoParser.Node_typeContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_node_type)
                        self.state = 124
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 125
                        localctx.operator = self.match(cocoParser.T__13)
                        self.state = 126
                        localctx.right = self.node_type(4)
                        pass

                    elif la_ == 2:
                        localctx = cocoParser.Node_typeContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_node_type)
                        self.state = 127
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 128
                        localctx.operator = self.match(cocoParser.T__14)
                        self.state = 129
                        localctx.right = self.node_type(3)
                        pass

             
                self.state = 134
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Whitespace_variationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def whitespace_node(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cocoParser.Whitespace_nodeContext)
            else:
                return self.getTypedRuleContext(cocoParser.Whitespace_nodeContext,i)


        def getRuleIndex(self):
            return cocoParser.RULE_whitespace_variation

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, cocoVisitor ):
                return visitor.visitWhitespace_variation(self)
            else:
                return visitor.visitChildren(self)




    def whitespace_variation(self):

        localctx = cocoParser.Whitespace_variationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whitespace_variation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.whitespace_node()
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==cocoParser.T__14:
                self.state = 136
                self.match(cocoParser.T__14)
                self.state = 137
                self.whitespace_node()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Whitespace_nodeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type_ = None # Token
            self.quantifier = None # RepeaterContext

        def Identifier(self):
            return self.getToken(cocoParser.Identifier, 0)

        def repeater(self):
            return self.getTypedRuleContext(cocoParser.RepeaterContext,0)


        def getRuleIndex(self):
            return cocoParser.RULE_whitespace_node

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, cocoVisitor ):
                return visitor.visitWhitespace_node(self)
            else:
                return visitor.visitChildren(self)




    def whitespace_node(self):

        localctx = cocoParser.Whitespace_nodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_whitespace_node)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            localctx.type_ = self.match(cocoParser.Identifier)
            self.state = 148
            _la = self._input.LA(1)
            if _la==cocoParser.T__0:
                self.state = 144
                self.match(cocoParser.T__0)
                self.state = 145
                localctx.quantifier = self.repeater()
                self.state = 146
                self.match(cocoParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Logic_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # Logic_exprContext
            self.operator = None # Token
            self.operand = None # Logic_exprContext
            self.parenthesis = None # Logic_exprContext
            self.type_ = None # Type_exprContext
            self.call = None # Arithmetic_exprContext
            self.right = None # Logic_exprContext

        def logic_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cocoParser.Logic_exprContext)
            else:
                return self.getTypedRuleContext(cocoParser.Logic_exprContext,i)


        def type_expr(self):
            return self.getTypedRuleContext(cocoParser.Type_exprContext,0)


        def arithmetic_expr(self):
            return self.getTypedRuleContext(cocoParser.Arithmetic_exprContext,0)


        def getRuleIndex(self):
            return cocoParser.RULE_logic_expr

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, cocoVisitor ):
                return visitor.visitLogic_expr(self)
            else:
                return visitor.visitChildren(self)



    def logic_expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = cocoParser.Logic_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_logic_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 151
                localctx.operator = self.match(cocoParser.T__12)
                self.state = 152
                localctx.operand = self.logic_expr(5)
                pass

            elif la_ == 2:
                self.state = 153
                self.match(cocoParser.T__8)
                self.state = 154
                localctx.parenthesis = self.logic_expr(0)
                self.state = 155
                self.match(cocoParser.T__10)
                pass

            elif la_ == 3:
                self.state = 157
                localctx.type_ = self.type_expr()
                pass

            elif la_ == 4:
                self.state = 158
                localctx.call = self.arithmetic_expr(0)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 169
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 167
                    la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                    if la_ == 1:
                        localctx = cocoParser.Logic_exprContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_logic_expr)
                        self.state = 161
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 162
                        localctx.operator = self.match(cocoParser.T__13)
                        self.state = 163
                        localctx.right = self.logic_expr(5)
                        pass

                    elif la_ == 2:
                        localctx = cocoParser.Logic_exprContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_logic_expr)
                        self.state = 164
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 165
                        localctx.operator = self.match(cocoParser.T__14)
                        self.state = 166
                        localctx.right = self.logic_expr(4)
                        pass

             
                self.state = 171
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Type_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.operand = None # Arithmetic_exprContext
            self.operator = None # Token
            self.type_ = None # Token
            self.variation = None # Whitespace_variationContext
            self.variable = None # Token
            self.second_variable = None # Token
            self.second_operand = None # Semantic_nodeContext

        def arithmetic_expr(self):
            return self.getTypedRuleContext(cocoParser.Arithmetic_exprContext,0)


        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(cocoParser.Identifier)
            else:
                return self.getToken(cocoParser.Identifier, i)

        def whitespace_variation(self):
            return self.getTypedRuleContext(cocoParser.Whitespace_variationContext,0)


        def semantic_node(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cocoParser.Semantic_nodeContext)
            else:
                return self.getTypedRuleContext(cocoParser.Semantic_nodeContext,i)


        def getRuleIndex(self):
            return cocoParser.RULE_type_expr

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, cocoVisitor ):
                return visitor.visitType_expr(self)
            else:
                return visitor.visitChildren(self)




    def type_expr(self):

        localctx = cocoParser.Type_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_type_expr)
        self._la = 0 # Token type
        try:
            self.state = 193
            la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                localctx.operand = self.arithmetic_expr(0)
                self.state = 173
                localctx.operator = self.match(cocoParser.T__15)
                self.state = 174
                localctx.type_ = self.match(cocoParser.Identifier)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                localctx.variation = self.whitespace_variation()
                self.state = 177
                localctx.operator = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==cocoParser.T__16 or _la==cocoParser.T__17):
                    localctx.operator = self._errHandler.recoverInline(self)
                else:
                    self.consume()
                self.state = 180
                la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
                if la_ == 1:
                    self.state = 178
                    localctx.variable = self.match(cocoParser.Identifier)
                    pass

                elif la_ == 2:
                    self.state = 179
                    localctx.operand = self.semantic_node()
                    pass


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 182
                localctx.variation = self.whitespace_variation()
                self.state = 183
                localctx.operator = self.match(cocoParser.T__18)
                self.state = 186
                la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
                if la_ == 1:
                    self.state = 184
                    localctx.variable = self.match(cocoParser.Identifier)
                    pass

                elif la_ == 2:
                    self.state = 185
                    localctx.operand = self.semantic_node()
                    pass


                self.state = 188
                self.match(cocoParser.T__13)
                self.state = 191
                la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
                if la_ == 1:
                    self.state = 189
                    localctx.second_variable = self.match(cocoParser.Identifier)
                    pass

                elif la_ == 2:
                    self.state = 190
                    localctx.second_operand = self.semantic_node()
                    pass


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
